--- a/src/components/Exercises/index.module.css
+++ b/src/components/Exercises/index.module.css
@@ -45,10 +45,10 @@
   border-bottom: 1px solid var(--color-gray-200);
   border-left: none;
   border-right: none;
-  width: 40px;
-  height: 56px;
+  width: 70px;
+  height: 36px;
   font-family: inherit;
-  font-size: 1rem;
+  font-size: 18px;
   font-weight: normal;
   background-color: transparent;
   color: var(--color-gray-900);
@@ -69,8 +69,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 25px;
-  height: 56px;
+  width: 35px;
+  height: 36px;
   margin: 0;
   outline: 0;
   padding: 0;
