--- a/src/components/Workouts/index.module.css
+++ b/src/components/Workouts/index.module.css
@@ -45,12 +45,12 @@
   border-bottom: 1px solid var(--color-gray-200);
   border-left: none;
   border-right: none;
-  width: 70px;
+  width: 45px;
   height: 36px;
   font-family: inherit;
   font-size: 18px;
   font-weight: normal;
-  background-color: transparent;
+  background-color: #FFF;
   color: var(--color-gray-900);
 
   text-align: center;
@@ -76,7 +76,7 @@
   padding: 0;
   border: 1px solid var(--color-gray-200);
   border-radius: 0.375rem;
-  background-color: var(--color-gray-50);
+  background-color: #FFF;
   background-clip: padding-box;
   color: var(--color-gray-900);
   user-select: none;
